feat(AG-021): create new api handlers
